hdone/objects/ProductObjectAction__mdt.object
<CustomObject>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Action__c</fullName>
        <label>Object Action</label>
        <referenceTo>Object_Action__mdt</referenceTo>
        <relationshipLabel>ProductObjectActions</relationshipLabel>
        <relationshipName>ProductObjectActions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Product_Object__c</fullName>
        <label>Product Object</label>
        <referenceTo>Product_Object__mdt</referenceTo>
        <relationshipLabel>ProductObjectActions</relationshipLabel>
        <relationshipName>ProductObjectActions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <description>Sort order for records</description>
        <inlineHelpText>Sort order for records</inlineHelpText>
        <label>Sort</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>ProductObjectAction</label>
    <pluralLabel>ProductObjectActions</pluralLabel>
</CustomObject>